--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^7.4.1"
+    "react-router-dom": "^7.4.1",
+    "sweetalert2": "^11.17.2",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
